manifests/echoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app: echoserver
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: unprotected-echoserver
spec:
  virtualhost:
    fqdn: unprotected.127-0-0-101.nip.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: echoserver
          port: 80
