manifests/echoservers-faulty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-1
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-2
    spec:
      containers:
      - name: conformance-echo
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-1
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-1
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-2
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-2
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: multiple-paths
spec:
  virtualhost:
    fqdn: httpproxy.127-0-0-101.nip.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: echoserver-1
          port: 80
    - conditions:
      - prefix: /subpage
      services:
        - name: echoserver-2
          port: 80
---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: multiple-paths
#spec:
#  rules:
#  - host: ingress.127-0-0-101.nip.io
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: echoserver-1
#          servicePort: 80
#      - path: /subpage
#        backend:
#          serviceName: echoserver-2
#          servicePort: 80
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiple-paths
spec:
  rules:
  - host: ingress.127-0-0-101.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver-1
            port:
              number: 80
      - path: /subpage
        pathType: Prefix
        backend:
          service:
            name: echoserver-2
            port:
              number: 80
